syntax="proto3";

package api;
option java_package = "com.github.wenweihu86.distkv.api";
option java_outer_classname = "MetaMessage";

import "common.proto";

message SetRequest {
    int64 key_sign = 1; // key整数签名
    int32 sharding_index = 2; // 分片id，每一组leader/followers都是一个分片
}

message SetResponse {
    BaseResponse base_res = 1;
}

message GetRequest {
    int64 key_sign = 1; // key整数签名
}

message GetResponse {
    BaseResponse base_res = 1;
    int32 sharding_index = 2; // 分片id，每一组leader/followers都是一个分片
}

message DeleteRequest {
    int64 key_sign = 1; // key整数签名
}

message DeleteResponse {
    BaseResponse base_res = 1;
}